src/oci_lexer_parser/grammar/gen/PolicyStatementParser.py
# Generated from PolicyStatement.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PolicyStatementParser ( Parser ):

    grammarFileName = "PolicyStatement.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "','", "'/'", "':'", "'{'", "'}'", "'('", 
                     "')'", "'='", "'!='" ]

    symbolicNames = [ "<INVALID>", "ALLOW", "DENY", "TO", "IN", "WHERE", 
                      "DEFINE", "AS", "ADMIT", "OF", "ENDORSE", "ASSOCIATE", 
                      "GROUP", "DYNAMIC_GROUP", "ANY_GROUP", "ANY_USER", 
                      "SERVICE", "COMPARTMENT", "TENANCY", "ANY_TENANCY", 
                      "ID", "MANAGE", "USE", "READ", "INSPECT", "ANY", "ALL", 
                      "ALL_RESOURCES", "BEFORE", "AFTER", "BETWEEN", "AND", 
                      "NOT", "COMMA", "SLASH", "COLON", "LBRACE", "RBRACE", 
                      "LPAREN", "RPAREN", "EQ", "NEQ", "OCID", "QUOTED_OCID", 
                      "PATTERN", "WORD", "QUOTED", "WS", "OTHER" ]

    RULE_statements = 0
    RULE_statement = 1
    RULE_allowStmt = 2
    RULE_effect = 3
    RULE_subject = 4
    RULE_verb = 5
    RULE_resource = 6
    RULE_location = 7
    RULE_compartmentPath = 8
    RULE_nameList = 9
    RULE_idList = 10
    RULE_qualifiedName = 11
    RULE_name = 12
    RULE_ocid = 13
    RULE_defineStmt = 14
    RULE_defineTarget = 15
    RULE_admitStmt = 16
    RULE_endorseStmt = 17
    RULE_endorseVerb = 18
    RULE_endorseScope = 19
    RULE_conditionExpr = 20
    RULE_conditionGroup = 21
    RULE_condition = 22
    RULE_condValue = 23

    ruleNames =  [ "statements", "statement", "allowStmt", "effect", "subject", 
                   "verb", "resource", "location", "compartmentPath", "nameList", 
                   "idList", "qualifiedName", "name", "ocid", "defineStmt", 
                   "defineTarget", "admitStmt", "endorseStmt", "endorseVerb", 
                   "endorseScope", "conditionExpr", "conditionGroup", "condition", 
                   "condValue" ]

    EOF = Token.EOF
    ALLOW=1
    DENY=2
    TO=3
    IN=4
    WHERE=5
    DEFINE=6
    AS=7
    ADMIT=8
    OF=9
    ENDORSE=10
    ASSOCIATE=11
    GROUP=12
    DYNAMIC_GROUP=13
    ANY_GROUP=14
    ANY_USER=15
    SERVICE=16
    COMPARTMENT=17
    TENANCY=18
    ANY_TENANCY=19
    ID=20
    MANAGE=21
    USE=22
    READ=23
    INSPECT=24
    ANY=25
    ALL=26
    ALL_RESOURCES=27
    BEFORE=28
    AFTER=29
    BETWEEN=30
    AND=31
    NOT=32
    COMMA=33
    SLASH=34
    COLON=35
    LBRACE=36
    RBRACE=37
    LPAREN=38
    RPAREN=39
    EQ=40
    NEQ=41
    OCID=42
    QUOTED_OCID=43
    PATTERN=44
    WORD=45
    QUOTED=46
    WS=47
    OTHER=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PolicyStatementParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyStatementParser.StatementContext)
            else:
                return self.getTypedRuleContext(PolicyStatementParser.StatementContext,i)


        def getRuleIndex(self):
            return PolicyStatementParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = PolicyStatementParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.statement()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1350) != 0)):
                    break

            self.state = 53
            self.match(PolicyStatementParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def allowStmt(self):
            return self.getTypedRuleContext(PolicyStatementParser.AllowStmtContext,0)


        def defineStmt(self):
            return self.getTypedRuleContext(PolicyStatementParser.DefineStmtContext,0)


        def admitStmt(self):
            return self.getTypedRuleContext(PolicyStatementParser.AdmitStmtContext,0)


        def endorseStmt(self):
            return self.getTypedRuleContext(PolicyStatementParser.EndorseStmtContext,0)


        def getRuleIndex(self):
            return PolicyStatementParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PolicyStatementParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.allowStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.defineStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.admitStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.endorseStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllowStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def effect(self):
            return self.getTypedRuleContext(PolicyStatementParser.EffectContext,0)


        def subject(self):
            return self.getTypedRuleContext(PolicyStatementParser.SubjectContext,0)


        def TO(self):
            return self.getToken(PolicyStatementParser.TO, 0)

        def verb(self):
            return self.getTypedRuleContext(PolicyStatementParser.VerbContext,0)


        def IN(self):
            return self.getToken(PolicyStatementParser.IN, 0)

        def location(self):
            return self.getTypedRuleContext(PolicyStatementParser.LocationContext,0)


        def resource(self):
            return self.getTypedRuleContext(PolicyStatementParser.ResourceContext,0)


        def WHERE(self):
            return self.getToken(PolicyStatementParser.WHERE, 0)

        def conditionExpr(self):
            return self.getTypedRuleContext(PolicyStatementParser.ConditionExprContext,0)


        def getRuleIndex(self):
            return PolicyStatementParser.RULE_allowStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllowStmt" ):
                listener.enterAllowStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllowStmt" ):
                listener.exitAllowStmt(self)




    def allowStmt(self):

        localctx = PolicyStatementParser.AllowStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_allowStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.effect()
            self.state = 62
            self.subject()
            self.state = 63
            self.match(PolicyStatementParser.TO)
            self.state = 64
            self.verb()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27 or _la==45:
                self.state = 65
                self.resource()


            self.state = 68
            self.match(PolicyStatementParser.IN)
            self.state = 69
            self.location()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 70
                self.match(PolicyStatementParser.WHERE)
                self.state = 71
                self.conditionExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EffectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALLOW(self):
            return self.getToken(PolicyStatementParser.ALLOW, 0)

        def DENY(self):
            return self.getToken(PolicyStatementParser.DENY, 0)

        def getRuleIndex(self):
            return PolicyStatementParser.RULE_effect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEffect" ):
                listener.enterEffect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEffect" ):
                listener.exitEffect(self)




    def effect(self):

        localctx = PolicyStatementParser.EffectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_effect)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PolicyStatementParser.RULE_subject

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AnyGroupContext(SubjectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolicyStatementParser.SubjectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ANY_GROUP(self):
            return self.getToken(PolicyStatementParser.ANY_GROUP, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnyGroup" ):
                listener.enterAnyGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnyGroup" ):
                listener.exitAnyGroup(self)


    class GroupByIdContext(SubjectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolicyStatementParser.SubjectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def GROUP(self):
            return self.getToken(PolicyStatementParser.GROUP, 0)
        def idList(self):
            return self.getTypedRuleContext(PolicyStatementParser.IdListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupById" ):
                listener.enterGroupById(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupById" ):
                listener.exitGroupById(self)


    class DynGroupByNameContext(SubjectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolicyStatementParser.SubjectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DYNAMIC_GROUP(self):
            return self.getToken(PolicyStatementParser.DYNAMIC_GROUP, 0)
        def nameList(self):
            return self.getTypedRuleContext(PolicyStatementParser.NameListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDynGroupByName" ):
                listener.enterDynGroupByName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDynGroupByName" ):
                listener.exitDynGroupByName(self)


    class DynGroupByIdContext(SubjectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolicyStatementParser.SubjectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DYNAMIC_GROUP(self):
            return self.getToken(PolicyStatementParser.DYNAMIC_GROUP, 0)
        def idList(self):
            return self.getTypedRuleContext(PolicyStatementParser.IdListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDynGroupById" ):
                listener.enterDynGroupById(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDynGroupById" ):
                listener.exitDynGroupById(self)


    class ServiceSubjectContext(SubjectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolicyStatementParser.SubjectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SERVICE(self):
            return self.getToken(PolicyStatementParser.SERVICE, 0)
        def nameList(self):
            return self.getTypedRuleContext(PolicyStatementParser.NameListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServiceSubject" ):
                listener.enterServiceSubject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServiceSubject" ):
                listener.exitServiceSubject(self)


    class AnyUserContext(SubjectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolicyStatementParser.SubjectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ANY_USER(self):
            return self.getToken(PolicyStatementParser.ANY_USER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnyUser" ):
                listener.enterAnyUser(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnyUser" ):
                listener.exitAnyUser(self)


    class GroupByNameContext(SubjectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolicyStatementParser.SubjectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def GROUP(self):
            return self.getToken(PolicyStatementParser.GROUP, 0)
        def nameList(self):
            return self.getTypedRuleContext(PolicyStatementParser.NameListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupByName" ):
                listener.enterGroupByName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupByName" ):
                listener.exitGroupByName(self)



    def subject(self):

        localctx = PolicyStatementParser.SubjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_subject)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = PolicyStatementParser.AnyGroupContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(PolicyStatementParser.ANY_GROUP)
                pass

            elif la_ == 2:
                localctx = PolicyStatementParser.AnyUserContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(PolicyStatementParser.ANY_USER)
                pass

            elif la_ == 3:
                localctx = PolicyStatementParser.ServiceSubjectContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.match(PolicyStatementParser.SERVICE)
                self.state = 79
                self.nameList()
                pass

            elif la_ == 4:
                localctx = PolicyStatementParser.GroupByNameContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.match(PolicyStatementParser.GROUP)
                self.state = 81
                self.nameList()
                pass

            elif la_ == 5:
                localctx = PolicyStatementParser.GroupByIdContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.match(PolicyStatementParser.GROUP)
                self.state = 83
                self.idList()
                pass

            elif la_ == 6:
                localctx = PolicyStatementParser.DynGroupByNameContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.match(PolicyStatementParser.DYNAMIC_GROUP)
                self.state = 85
                self.nameList()
                pass

            elif la_ == 7:
                localctx = PolicyStatementParser.DynGroupByIdContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.match(PolicyStatementParser.DYNAMIC_GROUP)
                self.state = 87
                self.idList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MANAGE(self):
            return self.getToken(PolicyStatementParser.MANAGE, 0)

        def USE(self):
            return self.getToken(PolicyStatementParser.USE, 0)

        def READ(self):
            return self.getToken(PolicyStatementParser.READ, 0)

        def INSPECT(self):
            return self.getToken(PolicyStatementParser.INSPECT, 0)

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(PolicyStatementParser.WORD)
            else:
                return self.getToken(PolicyStatementParser.WORD, i)

        def LBRACE(self):
            return self.getToken(PolicyStatementParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PolicyStatementParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PolicyStatementParser.COMMA)
            else:
                return self.getToken(PolicyStatementParser.COMMA, i)

        def getRuleIndex(self):
            return PolicyStatementParser.RULE_verb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerb" ):
                listener.enterVerb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerb" ):
                listener.exitVerb(self)




    def verb(self):

        localctx = PolicyStatementParser.VerbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_verb)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(PolicyStatementParser.MANAGE)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(PolicyStatementParser.USE)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.match(PolicyStatementParser.READ)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.match(PolicyStatementParser.INSPECT)
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.match(PolicyStatementParser.WORD)
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.match(PolicyStatementParser.LBRACE)
                self.state = 96
                self.match(PolicyStatementParser.WORD)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==33:
                    self.state = 97
                    self.match(PolicyStatementParser.COMMA)
                    self.state = 98
                    self.match(PolicyStatementParser.WORD)
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 104
                self.match(PolicyStatementParser.RBRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALL_RESOURCES(self):
            return self.getToken(PolicyStatementParser.ALL_RESOURCES, 0)

        def WORD(self):
            return self.getToken(PolicyStatementParser.WORD, 0)

        def getRuleIndex(self):
            return PolicyStatementParser.RULE_resource

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResource" ):
                listener.enterResource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResource" ):
                listener.exitResource(self)




    def resource(self):

        localctx = PolicyStatementParser.ResourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_resource)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not(_la==27 or _la==45):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PolicyStatementParser.RULE_location

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LocCompartmentNameContext(LocationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolicyStatementParser.LocationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COMPARTMENT(self):
            return self.getToken(PolicyStatementParser.COMPARTMENT, 0)
        def compartmentPath(self):
            return self.getTypedRuleContext(PolicyStatementParser.CompartmentPathContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocCompartmentName" ):
                listener.enterLocCompartmentName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocCompartmentName" ):
                listener.exitLocCompartmentName(self)


    class LocTenancyContext(LocationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolicyStatementParser.LocationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TENANCY(self):
            return self.getToken(PolicyStatementParser.TENANCY, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocTenancy" ):
                listener.enterLocTenancy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocTenancy" ):
                listener.exitLocTenancy(self)


    class LocCompartmentIdContext(LocationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolicyStatementParser.LocationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COMPARTMENT(self):
            return self.getToken(PolicyStatementParser.COMPARTMENT, 0)
        def ID(self):
            return self.getToken(PolicyStatementParser.ID, 0)
        def ocid(self):
            return self.getTypedRuleContext(PolicyStatementParser.OcidContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocCompartmentId" ):
                listener.enterLocCompartmentId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocCompartmentId" ):
                listener.exitLocCompartmentId(self)



    def location(self):

        localctx = PolicyStatementParser.LocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_location)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = PolicyStatementParser.LocTenancyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.match(PolicyStatementParser.TENANCY)
                pass

            elif la_ == 2:
                localctx = PolicyStatementParser.LocCompartmentIdContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(PolicyStatementParser.COMPARTMENT)
                self.state = 111
                self.match(PolicyStatementParser.ID)
                self.state = 112
                self.ocid()
                pass

            elif la_ == 3:
                localctx = PolicyStatementParser.LocCompartmentNameContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(PolicyStatementParser.COMPARTMENT)
                self.state = 114
                self.compartmentPath()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompartmentPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyStatementParser.NameContext)
            else:
                return self.getTypedRuleContext(PolicyStatementParser.NameContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PolicyStatementParser.COLON)
            else:
                return self.getToken(PolicyStatementParser.COLON, i)

        def getRuleIndex(self):
            return PolicyStatementParser.RULE_compartmentPath
